[gd_scene load_steps=27 format=3 uid="uid://mbgdkglkvsei"]

[ext_resource type="Shader" uid="uid://cga5cbf2pn5b3" path="res://Shadow.gdshader" id="1_dqf57"]
[ext_resource type="Texture2D" uid="uid://2gox5b7gnvnd" path="res://AssetBundle/Sprites/Foxy.png" id="1_me4qb"]
[ext_resource type="Script" uid="uid://bihh7a5lhob2u" path="res://Script/player.gd" id="1_qfy86"]
[ext_resource type="PackedScene" uid="uid://8lxabhtuil4x" path="res://tscn_scence/Bullet.tscn" id="2_wxmgc"]
[ext_resource type="AudioStream" uid="uid://b45gxf4r5ocr7" path="res://AssetBundle/Audio/GameOver.mp3" id="4_diywp"]
[ext_resource type="AudioStream" uid="uid://djtuqoqe1a7vy" path="res://AssetBundle/Audio/Gun.mp3" id="5_q44ul"]
[ext_resource type="AudioStream" uid="uid://dip7kfyafasyu" path="res://AssetBundle/Audio/Running.mp3" id="6_eit7e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n61u3"]
shader = ExtResource("1_dqf57")

[sub_resource type="AtlasTexture" id="AtlasTexture_w0imy"]
atlas = ExtResource("1_me4qb")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n61u3"]
atlas = ExtResource("1_me4qb")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuequ"]
atlas = ExtResource("1_me4qb")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f45r"]
atlas = ExtResource("1_me4qb")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnxww"]
atlas = ExtResource("1_me4qb")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n68w"]
atlas = ExtResource("1_me4qb")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5juvj"]
atlas = ExtResource("1_me4qb")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvow5"]
atlas = ExtResource("1_me4qb")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghmo"]
atlas = ExtResource("1_me4qb")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqu4d"]
atlas = ExtResource("1_me4qb")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfy86"]
atlas = ExtResource("1_me4qb")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxmgc"]
atlas = ExtResource("1_me4qb")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_diywp"]
atlas = ExtResource("1_me4qb")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q44ul"]
atlas = ExtResource("1_me4qb")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eit7e"]
atlas = ExtResource("1_me4qb")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqf57"]
atlas = ExtResource("1_me4qb")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_emu1f"]
animations = [{
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_w0imy")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_n61u3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_yuequ")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_2f45r")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_nnxww")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_8n68w")
}],
"loop": false,
"name": &"Hurt",
"speed": 6.5
}, {
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_5juvj")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_vvow5")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_kghmo")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_gqu4d")
}],
"loop": true,
"name": &"Idle",
"speed": 5.2
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfy86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxmgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diywp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q44ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eit7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqf57")
}],
"loop": true,
"name": &"Running",
"speed": 8.2
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfy86"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qfy86")
Bullet_Scence = ExtResource("2_wxmgc")

[node name="AnitSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_n61u3")
sprite_frames = SubResource("SpriteFrames_emu1f")
animation = &"Idle"
autoplay = "Idle"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(1.28, 1.28)
shape = SubResource("CircleShape2D_qfy86")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.69
autostart = true

[node name="Sound_Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_diywp")

[node name="Sound_Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q44ul")
volume_db = 10.0

[node name="Sound_Running" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_eit7e")
mix_target = 2

[connection signal="animation_finished" from="AnitSprite2D" to="." method="_on_anit_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_fire"]
